new arabic words

--- a/index.html
+++ b/index.html
@@ -2595,7 +2595,32 @@
   {"tense1": "endetté", "tense2": "مَدِين / مَدِينُون / مَدِينَان / مَدِينِينَ / مَدِينَيْن", "type": "word"},
   {"tense1": "Emprisonner", "tense2": "حَبَسَ/يَحْبِسُ/حَبْس/اِحْبِسْ/يُحْبَسُ/حُبِسَ", "type": "verb"},
   {"tense1": "oreiller", "tense2": "وِسَادَة / وِسَادَات / وِسَادَتَان / وِسَادَاتٍ / وِسَادَتَيْن", "type": "word"},
-  {"tense1": "écouter", "tense2": "أَصْغَى/يُصْغِي/إِصْغَاء/أَصْغِ/يُصْغَى/أُصْغِيَ", "type": "verb"}
+  {"tense1": "écouter", "tense2": "أَصْغَى/يُصْغِي/إِصْغَاء/أَصْغِ/يُصْغَى/أُصْغِيَ", "type": "verb"},
+  {"tense1": "Emprunter", "tense2": "اِقْتَرَضَ/يَقْتَرِضُ/اِقْتِرَاض/اِقْتَرِضْ/يُقْتَرَضُ/اُقْتُرِضَ", "type": "verb"},
+  {"tense1": "s’adapter", "tense2": "تَأَقْلَمَ/يَتَأَقْلَمُ/تَأَقْلُم/تَأَقْلَمْ/يُتَأَقْلَمُ/تُأُقْلِمَ", "type": "verb"},
+  {"tense1": "audacieux", "tense2": "جَرِيء / جُرَآء / جَرِيئَان / جُرَآءَ / جَرِيئَيْن", "type": "word"},
+  {"tense1": "rayer", "tense2": "خَدَشَ/يَخْدِشُ/خَدْش/اِخْدِشْ/يُخْدَشُ/خُدِشَ", "type": "verb"},
+  {"tense1": "Inconscient/innatentif", "tense2": "غَافِل / غَافِلُون / غَافِلَان / غَافِلِينَ / غَافِلَيْن", "type": "word"},
+  {"tense1": "connexion", "tense2": "تَوْصِيلَة / تَوْصِيلَات / تَوْصِيلَتَان / تَوْصِيلَاتٍ / تَوْصِيلَتَيْن", "type": "word"},
+  {"tense1": "écho", "tense2": "صَدًى / أَصْدَاء / صَدَيَان / أَصْدَاءٍ / صَدَيَيْن", "type": "word"},
+  {"tense1": "Charité", "tense2": "خَيْرِيَّة / خَيْرِيَّات / خَيْرِيَّتَان / خَيْرِيَّاتٍ / خَيْرِيَّتَيْن", "type": "word"},
+  {"tense1": "préparé", "tense2": "مُعَدّ / مُعَدُّون / مُعَدَّان / مُعَدِّينَ / مُعَدَّيْن", "type": "word"},
+  {"tense1": "fasciné", "tense2": "مَفْتُون / مَفْتُونُون / مَفْتُونَان / مَفْتُونِينَ / مَفْتُونَيْن", "type": "word"},
+  {"tense1": "Tirage au sort", "tense2": "قُرْعَةُ الْعُمْلَة", "type": "sentence"},
+  {"tense1": "inévitable", "tense2": "حَتْمِيَّة / حَتْمِيَّات / حَتْمِيَّتَان / حَتْمِيَّاتٍ / حَتْمِيَّتَيْن", "type": "word"},
+  {"tense1": "Assister/aider", "tense2": "أَعَانَ/يُعِينُ/إِعَانَة/أَعِنْ/يُعَانُ/أُعِينَ", "type": "verb"},
+  {"tense1": "geste", "tense2": "إِيمَاءَة / إِيمَاءَات / إِيمَاءَتَان / إِيمَاءَاتٍ / إِيمَاءَتَيْن", "type": "word"},
+  {"tense1": "marchandise", "tense2": "سِلْعَة / سِلَع / سِلْعَتَان / سِلَعٍ / سِلْعَتَيْن", "type": "word"},
+  {"tense1": "mannequin", "tense2": "عَارِضَةُ أَزْيَاء / عَارِضَاتُ أَزْيَاء / عَارِضَتَانِ أَزْيَاء / عَارِضَاتِ أَزْيَاءٍ / عَارِضَتَيْنِ أَزْيَاء", "type": "word"},
+  {"tense1": "Dénouement", "tense2": "مَطَاف / مَطَافَات / مَطَافَان / مَطَافَاتٍ / مَطَافَيْن", "type": "word"},
+  {"tense1": "publiquement", "tense2": "عَلَنًا", "type": "word"},
+  {"tense1": "abus", "tense2": "إِسَاءَة / إِسَاءَات / إِسَاءَتَان / إِسَاءَاتٍ / إِسَاءَتَيْن", "type": "word"},
+  {"tense1": "allégation", "tense2": "مَزْعَم / مَزَاعِم / مَزْعَمَان / مَزَاعِمٍ / مَزْعَمَيْن", "type": "word"},
+  {"tense1": "hyper", "tense2": "فَرْط / أَفْرَاط / فَرْطَان / أَفْرَاطٍ / فَرْطَيْن", "type": "word"},
+  {"tense1": "mineur", "tense2": "قَاصِر / قُصَّر / قَاصِرَان / قُصَّرٍ / قَاصِرَيْن", "type": "word"},
+  {"tense1": "Simplifié", "tense2": "مُبَسَّط / مُبَسَّطُون / مُبَسَّطَان / مُبَسَّطِينَ / مُبَسَّطَيْن", "type": "word"},
+  {"tense1": "dissimulation", "tense2": "تَسَتُّر / تَسَتُّرَات / تَسَتُّرَان / تَسَتُّرَاتٍ / تَسَتُّرَيْن", "type": "word"},
+  {"tense1": "berger", "tense2": "رَاعٍ / رُعَاة / رَاعِيَان / رُعَاةٍ / رَاعِيَيْن", "type": "word"}
 ]
         };
 
