new arabic words

--- a/index.html
+++ b/index.html
@@ -2636,7 +2636,32 @@
   {"tense1": "mineur", "tense2": "قَاصِر / قُصَّر / قَاصِرَان / قُصَّرٍ / قَاصِرَيْن", "type": "word"},
   {"tense1": "Simplifié", "tense2": "مُبَسَّط / مُبَسَّطُون / مُبَسَّطَان / مُبَسَّطِينَ / مُبَسَّطَيْن", "type": "word"},
   {"tense1": "dissimulation", "tense2": "تَسَتُّر / تَسَتُّرَات / تَسَتُّرَان / تَسَتُّرَاتٍ / تَسَتُّرَيْن", "type": "word"},
-  {"tense1": "berger", "tense2": "رَاعٍ / رُعَاة / رَاعِيَان / رُعَاةٍ / رَاعِيَيْن", "type": "word"}
+  {"tense1": "berger", "tense2": "رَاعٍ / رُعَاة / رَاعِيَان / رُعَاةٍ / رَاعِيَيْن", "type": "word"},
+    {"tense1": "risquer", "tense2": "جَازَفَ/يُجَازِفُ/مُجَازَفَة/جَازِفْ/يُجَازَفُ/جُوزِفَ", "type": "verb"},
+  {"tense1": "Dilemme", "tense2": "مُعْضِلَة / مُعْضِلَات / مُعْضِلَتَان / مُعْضِلَاتٍ / مُعْضِلَتَيْن", "type": "word"},
+  {"tense1": "brève", "tense2": "مُوجَزَة / مُوجَزَات / مُوجَزَتَان / مُوجَزَاتٍ / مُوجَزَتَيْن", "type": "word"},
+  {"tense1": "Accorder (instrument)", "tense2": "ضَبَطَ/يَضْبِطُ/ضَبْط/اِضْبِطْ/يُضْبَطُ/ضُبِطَ", "type": "verb"},
+  {"tense1": "Note (musique)", "tense2": "نَغْمَة / نَغَمَات / نَغْمَتَان / نَغَمَاتٍ / نَغْمَتَيْن", "type": "word"},
+  {"tense1": "Consulter", "tense2": "اِسْتَشَارَ/يَسْتَشِيرُ/اِسْتِشَارَة/اِسْتَشِرْ/يُسْتَشَارُ/اُسْتُشِيرَ", "type": "verb"},
+  {"tense1": "pratique", "tense2": "عَمَلِيَّة / عَمَلِيَّات / عَمَلِيَّتَان / عَمَلِيَّاتٍ / عَمَلِيَّتَيْن", "type": "word"},
+  {"tense1": "barre", "tense2": "قَضِيب / قُضْبَان / قَضِيبَان / قُضْبَانٍ / قَضِيبَيْن", "type": "word"},
+  {"tense1": "Guidon", "tense2": "مِقْوَد / مَقَاوِد / مِقْوَدَان / مَقَاوِدٍ / مِقْوَدَيْن", "type": "word"},
+  {"tense1": "Dépenser", "tense2": "أَنْفَقَ/يُنْفِقُ/إِنْفَاق/أَنْفِقْ/يُنْفَقُ/أُنْفِقَ", "type": "verb"},
+  {"tense1": "récolter", "tense2": "جَنَى/يَجْنِي/جَنْي/اِجْنِ/يُجْنَى/جُنِيَ", "type": "verb"},
+  {"tense1": "urbain", "tense2": "حَضَرِيّ / حَضَرِيُّون / حَضَرِيَّان / حَضَرِيِّينَ / حَضَرِيَّيْن", "type": "word"},
+  {"tense1": "Monopole", "tense2": "اِحْتِكَار / اِحْتِكَارَات / اِحْتِكَارَان / اِحْتِكَارَاتٍ / اِحْتِكَارَيْن", "type": "word"},
+  {"tense1": "Admettre/reconnaitre", "tense2": "أَقَرَّ/يُقِرُّ/إِقْرَار/أَقِرَّ/يُقَرُّ/أُقِرَّ", "type": "verb"},
+  {"tense1": "moelleux", "tense2": "طَرِيّ / طَرِيُّون / طَرِيَّان / طَرِيِّينَ / طَرِيَّيْن", "type": "word"},
+  {"tense1": "technologie", "tense2": "تِقْنِيَّة / تِقْنِيَّات / تِقْنِيَّتَان / تِقْنِيَّاتٍ / تِقْنِيَّتَيْن", "type": "word"},
+  {"tense1": "confier", "tense2": "أَوْكَلَ/يُوكِلُ/تَوْكِيل/أَوْكِلْ/يُوكَلُ/أُوكِلَ", "type": "verb"},
+  {"tense1": "Perseverance", "tense2": "مُثَابَرَة / مُثَابَرَات / مُثَابَرَتَان / مُثَابَرَاتٍ / مُثَابَرَتَيْن", "type": "word"},
+  {"tense1": "astuce", "tense2": "حِيلَة / حِيَل / حِيلَتَان / حِيَلٍ / حِيلَتَيْن", "type": "word"},
+  {"tense1": "urgent", "tense2": "مُلِحّ / مُلِحُّون / مُلِحَّان / مُلِحِّينَ / مُلِحَّيْن", "type": "word"},
+  {"tense1": "club", "tense2": "نَادٍ / نَوَادٍ / نَادِيَان / نَوَادٍ / نَادِيَيْن", "type": "word"},
+  {"tense1": "navigation", "tense2": "مِلَاحَة / مِلَاحَات / مِلَاحَتَان / مِلَاحَاتٍ / مِلَاحَتَيْن", "type": "word"},
+  {"tense1": "Organisation", "tense2": "مُؤَسَّسَة / مُؤَسَّسَات / مُؤَسَّسَتَان / مُؤَسَّسَاتٍ / مُؤَسَّسَتَيْن", "type": "word"},
+  {"tense1": "devenir", "tense2": "بَاتَ/يَبِيتُ/بَيَات/بِتْ/يُبَاتُ/بِيتَ", "type": "verb"},
+  {"tense1": "garage", "tense2": "مِرْآب / مَرَائِب / مِرْآبَان / مَرَائِبٍ / مِرْآبَيْن", "type": "word"}
 ]
         };
 
