--- a/index.html
+++ b/index.html
@@ -2643,7 +2643,7 @@
   {"tense1": "Accorder (instrument)", "tense2": "ضَبَطَ/يَضْبِطُ/ضَبْط/اِضْبِطْ/يُضْبَطُ/ضُبِطَ", "type": "verb"},
   {"tense1": "Note (musique)", "tense2": "نَغْمَة / نَغَمَات / نَغْمَتَان / نَغَمَاتٍ / نَغْمَتَيْن", "type": "word"},
   {"tense1": "Consulter", "tense2": "اِسْتَشَارَ/يَسْتَشِيرُ/اِسْتِشَارَة/اِسْتَشِرْ/يُسْتَشَارُ/اُسْتُشِيرَ", "type": "verb"},
-  {"tense1": "pratique", "tense2": "عَمَلِيَّة / عَمَلِيَّات / عَمَلِيَّتَان / عَمَلِيَّاتٍ / عَمَلِيَّتَيْن", "type": "word"},
+  {"tense1": "La pratique", "tense2": "عَمَلِيَّة / عَمَلِيَّات / عَمَلِيَّتَان / عَمَلِيَّاتٍ / عَمَلِيَّتَيْن", "type": "word"},
   {"tense1": "barre", "tense2": "قَضِيب / قُضْبَان / قَضِيبَان / قُضْبَانٍ / قَضِيبَيْن", "type": "word"},
   {"tense1": "Guidon", "tense2": "مِقْوَد / مَقَاوِد / مِقْوَدَان / مَقَاوِدٍ / مِقْوَدَيْن", "type": "word"},
   {"tense1": "Dépenser", "tense2": "أَنْفَقَ/يُنْفِقُ/إِنْفَاق/أَنْفِقْ/يُنْفَقُ/أُنْفِقَ", "type": "verb"},
