new arabic words

--- a/index.html
+++ b/index.html
@@ -2661,7 +2661,32 @@
   {"tense1": "navigation", "tense2": "مِلَاحَة / مِلَاحَات / مِلَاحَتَان / مِلَاحَاتٍ / مِلَاحَتَيْن", "type": "word"},
   {"tense1": "Organisation", "tense2": "مُؤَسَّسَة / مُؤَسَّسَات / مُؤَسَّسَتَان / مُؤَسَّسَاتٍ / مُؤَسَّسَتَيْن", "type": "word"},
   {"tense1": "devenir", "tense2": "بَاتَ/يَبِيتُ/بَيَات/بِتْ/يُبَاتُ/بِيتَ", "type": "verb"},
-  {"tense1": "garage", "tense2": "مِرْآب / مَرَائِب / مِرْآبَان / مَرَائِبٍ / مِرْآبَيْن", "type": "word"}
+  {"tense1": "garage", "tense2": "مِرْآب / مَرَائِب / مِرْآبَان / مَرَائِبٍ / مِرْآبَيْن", "type": "word"},
+  {"tense1": "munition", "tense2": "ذَخِيرَة / ذَخَائِر / ذَخِيرَتَان / ذَخَائِرٍ / ذَخِيرَتَيْن", "type": "word"},
+  {"tense1": "mouchoir", "tense2": "مِنْدِيل / مَنَادِيل / مِنْدِيلَان / مَنَادِيلَ / مِنْدِيلَيْن", "type": "word"},
+  {"tense1": "bénédiction", "tense2": "نِعْمَة / نِعَم / نِعْمَتَان / نِعَمٍ / نِعْمَتَيْن", "type": "word"},
+  {"tense1": "parrainage", "tense2": "رِعَايَة / رِعَايَات / رِعَايَتَان / رِعَايَاتٍ / رِعَايَتَيْن", "type": "word"},
+  {"tense1": "examiner", "tense2": "فَحَصَ/يَفْحَصُ/فَحْص/اِفْحَصْ/يُفْحَصُ/فُحِصَ", "type": "verb"},
+  {"tense1": "quartier", "tense2": "حَيّ / أَحْيَاء / حَيَّان / أَحْيَاءٍ / حَيَّيْن", "type": "word"},
+  {"tense1": "phobie", "tense2": "رُهَاب / رُهَابَات / رُهَابَان / رُهَابَاتٍ / رُهَابَيْن", "type": "word"},
+  {"tense1": "Exagérer", "tense2": "بَالَغَ/يُبَالِغُ/مُبَالَغَة/بَالِغْ/يُبَالَغُ/بُولِغَ", "type": "verb"},
+  {"tense1": "location", "tense2": "إِيجَار / إِيجَارَات / إِيجَارَان / إِيجَارَاتٍ / إِيجَارَيْن", "type": "word"},
+  {"tense1": "Tolérer", "tense2": "تَحَمَّلَ/يَتَحَمَّلُ/تَحَمُّل/تَحَمَّلْ/يُتَحَمَّلُ/تُحُمِّلَ", "type": "verb"},
+  {"tense1": "Anomalie", "tense2": "شُذُوذ / شُذُوذَات / شُذُوذَان / شُذُوذَاتٍ / شُذُوذَيْن", "type": "word"},
+  {"tense1": "carton", "tense2": "وَرَقٌ مُقَوَّى / أَوْرَاقٌ مُقَوَّاة / وَرَقَانِ مُقَوَّيَان / أَوْرَاقٍ مُقَوَّاةٍ / وَرَقَيْنِ مُقَوَّيَيْن", "type": "word"},
+  {"tense1": "déplacer", "tense2": "نَزَحَ/يَنْزَحُ/نُزُوح/اِنْزَحْ/يُنْزَحُ/نُزِحَ", "type": "verb"},
+  {"tense1": "spontané", "tense2": "عَفَوِيّ / عَفَوِيُّون / عَفَوِيَّان / عَفَوِيِّينَ / عَفَوِيَّيْن", "type": "word"},
+  {"tense1": "Cellule biologique", "tense2": "خَلِيَّة / خَلَايَا / خَلِيَّتَان / خَلَايَاٍ / خَلِيَّتَيْن", "type": "word"},
+  {"tense1": "Quel que soit", "tense2": "بِغَضِّ النَّظَرِ عَنْ", "type": "sentence"},
+  {"tense1": "Exemple/modèle", "tense2": "قُدْوَة / قُدْوَات / قُدْوَتَان / قُدْوَاتٍ / قُدْوَتَيْن", "type": "word"},
+  {"tense1": "expédier", "tense2": "شَحَنَ/يَشْحَنُ/شَحْن/اِشْحَنْ/يُشْحَنُ/شُحِنَ", "type": "verb"},
+  {"tense1": "Activer", "tense2": "فَعَّلَ/يُفَعِّلُ/تَفْعِيل/فَعِّلْ/يُفَعَّلُ/فُعِّلَ", "type": "verb"},
+  {"tense1": "étant donné que", "tense2": "بِمَا أَنَّ", "type": "sentence"},
+  {"tense1": "afin de", "tense2": "بِحَيْثُ", "type": "sentence"},
+  {"tense1": "extrañar", "tense2": "اِشْتَاقَ/يَشْتَاقُ/اِشْتِيَاق/اِشْتَقْ/يُشْتَاقُ/اُشْتِيقَ", "type": "verb"},
+  {"tense1": "calendrier", "tense2": "تَقْوِيم / تَقَاوِيم / تَقْوِيمَان / تَقَاوِيمَ / تَقْوِيمَيْن", "type": "word"},
+  {"tense1": "Occupation", "tense2": "إِشْغَال / إِشْغَالَات / إِشْغَالَان / إِشْغَالَاتٍ / إِشْغَالَيْن", "type": "word"},
+  {"tense1": "embouteillage", "tense2": "اِزْدِحَامٌ مَرُورِيّ / اِزْدِحَامٌ مَرُورِيّ / اِزْدِحَامٌ مَرُورِيّ / اِزْدِحَامٍ مَرُورِيٍّ / اِزْدِحَامٌ مَرُورِيّ", "type": "word"}
 ]
         };
 
