new arabic words

--- a/index.html
+++ b/index.html
@@ -2666,12 +2666,10 @@
   {"tense1": "mouchoir", "tense2": "مِنْدِيل / مَنَادِيل / مِنْدِيلَان / مَنَادِيلَ / مِنْدِيلَيْن", "type": "word"},
   {"tense1": "bénédiction", "tense2": "نِعْمَة / نِعَم / نِعْمَتَان / نِعَمٍ / نِعْمَتَيْن", "type": "word"},
   {"tense1": "parrainage", "tense2": "رِعَايَة / رِعَايَات / رِعَايَتَان / رِعَايَاتٍ / رِعَايَتَيْن", "type": "word"},
-  {"tense1": "examiner", "tense2": "فَحَصَ/يَفْحَصُ/فَحْص/اِفْحَصْ/يُفْحَصُ/فُحِصَ", "type": "verb"},
   {"tense1": "quartier", "tense2": "حَيّ / أَحْيَاء / حَيَّان / أَحْيَاءٍ / حَيَّيْن", "type": "word"},
   {"tense1": "phobie", "tense2": "رُهَاب / رُهَابَات / رُهَابَان / رُهَابَاتٍ / رُهَابَيْن", "type": "word"},
   {"tense1": "Exagérer", "tense2": "بَالَغَ/يُبَالِغُ/مُبَالَغَة/بَالِغْ/يُبَالَغُ/بُولِغَ", "type": "verb"},
   {"tense1": "location", "tense2": "إِيجَار / إِيجَارَات / إِيجَارَان / إِيجَارَاتٍ / إِيجَارَيْن", "type": "word"},
-  {"tense1": "Tolérer", "tense2": "تَحَمَّلَ/يَتَحَمَّلُ/تَحَمُّل/تَحَمَّلْ/يُتَحَمَّلُ/تُحُمِّلَ", "type": "verb"},
   {"tense1": "Anomalie", "tense2": "شُذُوذ / شُذُوذَات / شُذُوذَان / شُذُوذَاتٍ / شُذُوذَيْن", "type": "word"},
   {"tense1": "carton", "tense2": "وَرَقٌ مُقَوَّى / أَوْرَاقٌ مُقَوَّاة / وَرَقَانِ مُقَوَّيَان / أَوْرَاقٍ مُقَوَّاةٍ / وَرَقَيْنِ مُقَوَّيَيْن", "type": "word"},
   {"tense1": "déplacer", "tense2": "نَزَحَ/يَنْزَحُ/نُزُوح/اِنْزَحْ/يُنْزَحُ/نُزِحَ", "type": "verb"},
@@ -2686,7 +2684,10 @@
   {"tense1": "extrañar", "tense2": "اِشْتَاقَ/يَشْتَاقُ/اِشْتِيَاق/اِشْتَقْ/يُشْتَاقُ/اُشْتِيقَ", "type": "verb"},
   {"tense1": "calendrier", "tense2": "تَقْوِيم / تَقَاوِيم / تَقْوِيمَان / تَقَاوِيمَ / تَقْوِيمَيْن", "type": "word"},
   {"tense1": "Occupation", "tense2": "إِشْغَال / إِشْغَالَات / إِشْغَالَان / إِشْغَالَاتٍ / إِشْغَالَيْن", "type": "word"},
-  {"tense1": "embouteillage", "tense2": "اِزْدِحَامٌ مَرُورِيّ / اِزْدِحَامٌ مَرُورِيّ / اِزْدِحَامٌ مَرُورِيّ / اِزْدِحَامٍ مَرُورِيٍّ / اِزْدِحَامٌ مَرُورِيّ", "type": "word"}
+  {"tense1": "embouteillage", "tense2": "اِزْدِحَامٌ مَرُورِيّ / اِزْدِحَامٌ مَرُورِيّ / اِزْدِحَامٌ مَرُورِيّ / اِزْدِحَامٍ مَرُورِيٍّ / اِزْدِحَامٌ مَرُورِيّ", "type": "word"},
+  {"tense1": "Heure de pointe", "tense2": "أَوْقَاتُ الذُّرْوَة", "type": "sentence"},
+  {"tense1": "terme", "tense2": "مُصْطَلَح / مُصْطَلَحَات / مُصْطَلَحَان / مُصْطَلَحَاتٍ / مُصْطَلَحَيْن", "type": "word"},
+  {"tense1": "climax", "tense2": "ذُرْوَة / ذُرًى / ذُرْوَتَان / ذُرًى / ذُرْوَتَيْن", "type": "word"}
 ]
         };
 
