new arabic words

--- a/index.html
+++ b/index.html
@@ -2687,7 +2687,31 @@
   {"tense1": "embouteillage", "tense2": "اِزْدِحَامٌ مَرُورِيّ / اِزْدِحَامٌ مَرُورِيّ / اِزْدِحَامٌ مَرُورِيّ / اِزْدِحَامٍ مَرُورِيٍّ / اِزْدِحَامٌ مَرُورِيّ", "type": "word"},
   {"tense1": "Heure de pointe", "tense2": "أَوْقَاتُ الذُّرْوَة", "type": "sentence"},
   {"tense1": "terme", "tense2": "مُصْطَلَح / مُصْطَلَحَات / مُصْطَلَحَان / مُصْطَلَحَاتٍ / مُصْطَلَحَيْن", "type": "word"},
-  {"tense1": "climax", "tense2": "ذُرْوَة / ذُرًى / ذُرْوَتَان / ذُرًى / ذُرْوَتَيْن", "type": "word"}
+  {"tense1": "climax", "tense2": "ذُرْوَة / ذُرًى / ذُرْوَتَان / ذُرًى / ذُرْوَتَيْن", "type": "word"},
+  {"tense1": "entrepreneur", "tense2": "رَائِدُ أَعْمَال / رُوَّادُ أَعْمَال / رَائِدَا أَعْمَال / رُوَّادِ أَعْمَالٍ / رَائِدَيْ أَعْمَال", "type": "word"},
+{"tense1": "VIP", "tense2": "شَخْصِيَّةٌ مُهِمَّة / شَخْصِيَّاتٌ مُهِمَّة / شَخْصِيَّتَانِ مُهِمَّتَان / شَخْصِيَّاتٍ مُهِمَّةٍ / شَخْصِيَّتَيْنِ مُهِمَّتَيْن", "type": "word"},
+{"tense1": "intérieur", "tense2": "بَاطِن / بَوَاطِن / بَاطِنَان / بَوَاطِنَ / بَاطِنَيْن", "type": "word"},
+{"tense1": "égoïste", "tense2": "أَنَانِيّ / أَنَانِيُّون / أَنَانِيَّان / أَنَانِيِّينَ / أَنَانِيَّيْن", "type": "word"},
+{"tense1": "agoniser", "tense2": "اِحْتَضَرَ/يَحْتَضِرُ/اِحْتِضَار/اِحْتَضِرْ/يُحْتَضَرُ/اُحْتُضِرَ", "type": "verb"},
+{"tense1": "Infection/contagion", "tense2": "عَدْوَى / عَدْوَيَات / عَدْوَتَان / عَدْوَيَاتٍ / عَدْوَتَيْن", "type": "word"},
+{"tense1": "bouée", "tense2": "طَوْقُ نَجَاة / أَطْوَاقُ نَجَاة / طَوْقَا نَجَاة / أَطْوَاقِ نَجَاةٍ / طَوْقَيْ نَجَاة", "type": "word"},
+{"tense1": "moteur", "tense2": "مُحَرِّك / مُحَرِّكَات / مُحَرِّكَان / مُحَرِّكَاتٍ / مُحَرِّكَيْن", "type": "word"},
+{"tense1": "S’aligner / faire la queue", "tense2": "اِصْطَفَّ/يَصْطَفُّ/اِصْطِفَاف/اِصْطَفَّ/يُصْطَفُّ/اُصْطُفَّ", "type": "verb"},
+{"tense1": "agréable", "tense2": "سَارّ / سَارُّون / سَارَّان / سَارِّينَ / سَارَّيْن", "type": "word"},
+{"tense1": "gifler", "tense2": "صَفَعَ/يَصْفَعُ/صَفْع/اِصْفَعْ/يُصْفَعُ/صُفِعَ", "type": "verb"},
+{"tense1": "remplacement", "tense2": "إِحْلَال / إِحْلَالَات / إِحْلَالَان / إِحْلَالَاتٍ / إِحْلَالَيْن", "type": "word"},
+{"tense1": "lampe", "tense2": "مِصْبَاح / مَصَابِيح / مِصْبَاحَان / مَصَابِيحَ / مِصْبَاحَيْن", "type": "word"},
+{"tense1": "Promotion / réduction", "tense2": "خَصْم / خُصُومَات / خَصْمَان / خُصُومَاتٍ / خَصْمَيْن", "type": "word"},
+{"tense1": "Lister", "tense2": "سَرَدَ/يَسْرُدُ/سَرْد/اِسْرُدْ/يُسْرَدُ/سُرِدَ", "type": "verb"},
+{"tense1": "filtrer", "tense2": "صَفَّى/يُصَفِّي/تَصْفِيَة/صَفِّ/يُصَفَّى/صُفِّيَ", "type": "verb"},
+{"tense1": "Évaporé", "tense2": "تَبَخَّرَ/يَتَبَخَّرُ/تَبَخُّر/تَبَخَّرْ/يُتَبَخَّرُ/تُبُخِّرَ", "type": "verb"},
+{"tense1": "indispensable", "tense2": "لَا غِنَى عَنْهُ", "type": "sentence"},
+{"tense1": "certitude", "tense2": "يَقِين / يَقِينَات / يَقِينَان / يَقِيناتٍ / يَقِينَيْن", "type": "word"},
+{"tense1": "résider", "tense2": "أَقَامَ/يُقِيمُ/إِقَامَة/أَقِمْ/يُقَامُ/أُقِيمَ", "type": "verb"},
+{"tense1": "contrainte", "tense2": "قَيْد / قُيُود / قَيْدَان / قُيُودٍ / قَيْدَيْن", "type": "word"},
+{"tense1": "Pilule", "tense2": "حَبَّة / حَبَّات / حَبَّتَان / حَبَّاتٍ / حَبَّتَيْن", "type": "word"},
+{"tense1": "Cheveux gris", "tense2": "شَيْب", "type": "sentence"},
+{"tense1": "teinture", "tense2": "صِبْغَة / صِبْغَات / صِبْغَتَان / صِبْغَاتٍ / صِبْغَتَيْن", "type": "word"}
 ]
         };
 
