new arabic words

--- a/index.html
+++ b/index.html
@@ -2711,7 +2711,32 @@
 {"tense1": "contrainte", "tense2": "قَيْد / قُيُود / قَيْدَان / قُيُودٍ / قَيْدَيْن", "type": "word"},
 {"tense1": "Pilule", "tense2": "حَبَّة / حَبَّات / حَبَّتَان / حَبَّاتٍ / حَبَّتَيْن", "type": "word"},
 {"tense1": "Cheveux gris", "tense2": "شَيْب", "type": "sentence"},
-{"tense1": "teinture", "tense2": "صِبْغَة / صِبْغَات / صِبْغَتَان / صِبْغَاتٍ / صِبْغَتَيْن", "type": "word"}
+{"tense1": "teinture", "tense2": "صِبْغَة / صِبْغَات / صِبْغَتَان / صِبْغَاتٍ / صِبْغَتَيْن", "type": "word"},
+{"tense1": "remplacer", "tense2": "خَلَفَ/يَخْلُفُ/خَلَف/اِخْلُفْ/يُخْلَفُ/خُلِفَ", "type": "verb"},
+{"tense1": "variable", "tense2": "مُتَغَيِّر / مُتَغَيِّرَات / مُتَغَيِّرَان / مُتَغَيِّرَاتٍ / مُتَغَيِّرَيْن", "type": "word"},
+{"tense1": "déterminé/motivé", "tense2": "عَازِم / عَازِمُون / عَازِمَان / عَازِمِينَ / عَازِمَيْن", "type": "word"},
+{"tense1": "biographie", "tense2": "سِيرَةٌ ذَاتِيَّة / سِيَرٌ ذَاتِيَّة / سِيرَتَانِ ذَاتِيَّتَان / سِيَرٍ ذَاتِيَّةٍ / سِيرَتَيْنِ ذَاتِيَّتَيْن", "type": "word"},
+{"tense1": "Consultation", "tense2": "اِسْتِشَارَة / اِسْتِشَارَات / اِسْتِشَارَتَان / اِسْتِشَارَاتٍ / اِسْتِشَارَتَيْن", "type": "word"},
+{"tense1": "Cendre", "tense2": "رَمَاد / رُمَاد / رَمَادَان / رُمَادٍ / رَمَادَيْن", "type": "word"},
+{"tense1": "Acquérir (finance)", "tense2": "اِسْتِحْوَاذ / اِسْتِحْوَاذَات / اِسْتِحْوَاذَان / اِسْتِحْوَاذَاتٍ / اِسْتِحْوَاذَيْن", "type": "word"},
+{"tense1": "Déduire", "tense2": "اِسْتَنْبَطَ/يَسْتَنْبِطُ/اِسْتِنْبَاط/اِسْتَنْبِطْ/يُسْتَنْبَطُ/اُسْتُنْبِطَ", "type": "verb"},
+{"tense1": "chronique", "tense2": "مُزْمِن / مُزْمِنُون / مُزْمِنَان / مُزْمِنِينَ / مُزْمِنَيْن", "type": "word"},
+{"tense1": "stress", "tense2": "إِجْهَاد / إِجْهَادَات / إِجْهَادَان / إِجْهَادَاتٍ / إِجْهَادَيْن", "type": "word"},
+{"tense1": "infrastructure", "tense2": "بِنْيَةٌ تَحْتِيَّة / بِنْيَاتٌ تَحْتِيَّة / بِنْيَتَانِ تَحْتِيَّتَان / بِنْيَاتٍ تَحْتِيَّةٍ / بِنْيَتَيْنِ تَحْتِيَّتَيْن", "type": "word"},
+{"tense1": "cabine", "tense2": "مَقْصُورَة / مَقَاصِير / مَقْصُورَتَان / مَقَاصِيرَ / مَقْصُورَتَيْن", "type": "word"},
+{"tense1": "cuire", "tense2": "خَبَزَ/يَخْبِزُ/خَبْز/اِخْبِزْ/يُخْبَزُ/خُبِزَ", "type": "verb"},
+{"tense1": "Penser / croire", "tense2": "حَسِبَ/يَحْسَبُ/حِسَاب/اِحْسَبْ/يُحْسَبُ/حُسِبَ", "type": "verb"},
+{"tense1": "Obliger / contraindre", "tense2": "أَرْغَمَ/يُرْغِمُ/إِرْغَام/أَرْغِمْ/يُرْغَمُ/أُرْغِمَ", "type": "verb"},
+{"tense1": "Régime", "tense2": "حِمْيَة / حِمْيَات / حِمْيَتَان / حِمْيَاتٍ / حِمْيَتَيْن", "type": "word"},
+{"tense1": "Frapper / sonner", "tense2": "دَقَّ/يَدُقُّ/دَقّ/دُقَّ/يُدَقُّ/دُقَّ", "type": "verb"},
+{"tense1": "pétard", "tense2": "مُفَرْقِعَة / مُفَرْقِعَات / مُفَرْقِعَتَان / مُفَرْقِعَاتٍ / مُفَرْقِعَتَيْن", "type": "word"},
+{"tense1": "Décalage horaire", "tense2": "فَارِقٌ زَمَنِيّ", "type": "sentence"},
+{"tense1": "Au cœur de / au milieu de", "tense2": "فِي خِضَمِّ", "type": "sentence"},
+{"tense1": "Nouvel an", "tense2": "رَأْسُ السَّنَة", "type": "sentence"},
+{"tense1": "village", "tense2": "قَرْيَة / قُرًى / قَرْيَتَان / قُرًى / قَرْيَتَيْن", "type": "word"},
+{"tense1": "Le ton", "tense2": "نَغْمَة / نَغَمَات / نَغْمَتَان / نَغَمَاتٍ / نَغْمَتَيْن", "type": "word"},
+{"tense1": "Superficiel", "tense2": "ضَحَالَة / ضَحَالَات / ضَحَالَتَان / ضَحَالَاتٍ / ضَحَالَتَيْن", "type": "word"},
+{"tense1": "dominant", "tense2": "سَائِد / سَائِدُون / سَائِدَان / سَائِدِينَ / سَائِدَيْن", "type": "word"}
 ]
         };
 
