--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
             text-align: center;
             margin: 15px 0;
         }
+
+        .sentence-display {
+            font-size: 1.25rem;
+            font-weight: 600;
+            text-align: center;
+            margin: 15px 0;
+        }
     
         .word-form {
             font-size: 2.5rem;
@@ -519,7 +526,7 @@
 
                             <div id="sentenceDisplay" style="display: none;">
                                 <div class="sentence-card glass-card p-4 mb-4">
-                                    <div class="word-display" id="currentSentence"></div>
+                                    <div class="sentence-display" id="currentSentence"></div>
                                     <div id="translationDisplay" class="translation mt-3" style="display: none;"></div>
                                 </div>
 
